--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "camelcase":"warn",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "import/extensions": [
